Updated git ignore to include .vscode

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ tags
 
 ### MacOS FS
 .DS_Store
+
+### VisualStudioCode ###
+.vscode/* 
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
