--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
   - pytest 
 
-script: pytest--cov=tests/test_client.py
+script: pytest--cov=clickupy tests/
 
 after_success:
   - coveralls
