--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.6"
 
 install:
+  - pip install setuptools
   - pip install -r requirements.txt
   - pip install pytest-cov
   - pip install coveralls
